# rust-static_assert_macro

./: .all-contributorsrc  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
