[package]
name = "static_assert_macro"
version = "1.1.0"
authors = ["NODA, Kai <nodakai@gmail.com>"]
description = "Library implementation of so-called `static_assert`"
documentation = "https://docs.rs/static_assert_macro/"
repository = "https://github.com/nodakai/rust-static_assert_macro"
keywords = ["static_assert", "static", "assert"]
readme = "README.md"
license = "Apache-2.0"
edition = "2015"
